[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/PlayerTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/abstract/BaseWorldScene.gd" type="Script" id=3]
[ext_resource path="res://assets/shaders/Cloud_shadow.tres" type="Material" id=4]
[ext_resource path="res://weather/Fog.tscn" type="PackedScene" id=5]
[ext_resource path="res://camera/CameraController.tscn" type="PackedScene" id=6]

[node name="BaseWorldScene" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="InnerScenes" type="YSort" parent="."]
position = Vector2( 383, 214 )

[node name="PlayerTemplate" parent="InnerScenes" instance=ExtResource( 1 )]
position = Vector2( -126, -45 )
collision_layer = 2

[node name="Clouds" parent="." instance=ExtResource( 5 )]
material = ExtResource( 4 )
margin_left = -960.0
margin_top = -25.0
margin_right = 3212.0
margin_bottom = 2495.0

[node name="CameraController" parent="." instance=ExtResource( 6 )]
position = Vector2( 437, 273 )
